--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,12 +14,16 @@ jobs:
         include:
           - runner: ubuntu-latest
             os: linux-amd64
+            target: x86_64-unknown-linux-musl
           - runner: ubuntu-24.04-arm
             os: linux-aarch64
+            target: aarch64-unknown-linux-musl
           - runner: windows-latest
             os: windows
+            target: x86_64-pc-windows-msvc
           - runner: macos-latest
             os: macos
+            target: aarch64-apple-darwin
 
     steps:
       - name: Checkout code
@@ -27,6 +31,8 @@ jobs:
 
       - name: Set up Rust
         uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.target }}
 
       - name: Build release binary
         run: cargo build --release
