--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,12 +14,16 @@ jobs:
         include:
           - runner: ubuntu-latest
             os: linux-amd64
+            target: x86_64-unknown-linux-musl
           - runner: ubuntu-24.04-arm
             os: linux-aarch64
+            target: aarch64-unknown-linux-musl
           - runner: windows-latest
             os: windows
+            target: x86_64-pc-windows-msvc
           - runner: macos-latest
             os: macos
+            target: aarch64-apple-darwin
 
     steps:
       - name: Checkout code
@@ -27,9 +31,11 @@ jobs:
 
       - name: Set up Rust
         uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.target }}
 
       - name: Build release binary
-        run: cargo build --release
+        run: cargo build --release --target ${{ matrix.target }}
 
       - name: Prepare artifact
         id: prep
@@ -37,9 +43,9 @@ jobs:
           BIN_NAME=clapper-${{ matrix.os }}
           if [[ "${{ matrix.os }}" == "windows" ]]; then
             BIN_NAME="${BIN_NAME}.exe"
-            cp target/release/clapper.exe "$BIN_NAME"
+            cp target/${{ matrix.target }}/release/clapper.exe "$BIN_NAME"
           else
-            cp target/release/clapper "$BIN_NAME"
+            cp target/${{ matrix.target }}/release/clapper "$BIN_NAME"
           fi
           echo "BIN_NAME=$BIN_NAME" >> $GITHUB_ENV
         shell: bash
